--- a/frontend/src/assets/styles/_base.sass
+++ b/frontend/src/assets/styles/_base.sass
@@ -10,7 +10,7 @@
   padding: 0
 
 body
-  // @apply font-normal text-base bg-gray-200
+  @apply font-normal text-base bg-neutral-100  
   // background-color: variables..$color-blue
   font-family: 'RobotoSlab', sans-serif
   text-rendering: optimizeLegibility
